--- a/SpeckleRhinoUI/package.json
+++ b/SpeckleRhinoUI/package.json
@@ -14,8 +14,8 @@
     "copy_dev_jquery": "cpx \"node_modules/jquery/dist/jquery.js\" app/js/lib",
     "copy_dist_src": "cpx \"app/index.html\" \"../SpeckleRhinoChromium/app/\" && cpx \"app/js/app.js\" \"../SpeckleRhinoChromium/app/js/\"",
     "copy_dist_dependencies": "npm run copy_dist_bootstrap && npm run copy_dist_jquery",
-    "copy_dist_bootstrap": "cpx \"node_modules/bootstrap/dist/js/bootstrap.min.js\" \"../SpeckleRhinoChromium/app/js/lib\" && cpx \"node_modules/bootstrap/dist/css/bootstrap.min.css\" \"../SpeckleRhinoChromium/app/css\" && cpx \"node_modules/bootstrap/dist/fonts/*.{eot,ttf,svg,woff,woff2}\" \"../SpeckleRhinoChromium/app/fonts/\"",
-    "copy_dist_jquery": "cpx \"node_modules/jquery/dist/jquery.min.js\" \"../SpeckleRhinoChromium/app/js/lib\""
+    "copy_dist_bootstrap": "cpx \"node_modules/bootstrap/dist/js/bootstrap.js\" \"../SpeckleRhinoChromium/app/js/lib\" && cpx \"node_modules/bootstrap/dist/css/bootstrap.css\" \"../SpeckleRhinoChromium/app/css\" && cpx \"node_modules/bootstrap/dist/fonts/*.{eot,ttf,svg,woff,woff2}\" \"../SpeckleRhinoChromium/app/fonts/\"",
+    "copy_dist_jquery": "cpx \"node_modules/jquery/dist/jquery.js\" \"../SpeckleRhinoChromium/app/js/lib\""
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
