--- a/SpeckleRhinoChromium/SpeckleRhinoPlugIn.csproj
+++ b/SpeckleRhinoChromium/SpeckleRhinoPlugIn.csproj
@@ -68,6 +68,8 @@
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="RestSharp, Version=105.2.3.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\RestSharp.105.2.3\lib\net452\RestSharp.dll</HintPath>
     </Reference>
@@ -94,6 +96,7 @@
     <Reference Include="websocket-sharp, Version=1.0.2.59611, Culture=neutral, PublicKeyToken=5660b08a1845a91e, processorArchitecture=MSIL">
       <HintPath>..\packages\WebSocketSharp.1.0.3-rc11\lib\websocket-sharp.dll</HintPath>
     </Reference>
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CefCustomObject.cs" />
@@ -103,6 +106,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="SpeckleRhinoCommand.cs" />
+    <Compile Include="SpeckleRhinoModel.cs" />
     <Compile Include="SpeckleRhinoPanelControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -111,6 +115,7 @@
     </Compile>
     <Compile Include="SpeckleRhinoPlugIn.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SpeckleRhinoViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
