--- a/SpeckleRhinoChromium/SpeckleRhinoPlugIn.csproj
+++ b/SpeckleRhinoChromium/SpeckleRhinoPlugIn.csproj
@@ -115,7 +115,9 @@
     </Compile>
     <Compile Include="SpeckleRhinoPlugIn.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SpeckleRhinoReceiverWorker.cs" />
     <Compile Include="SpeckleRhinoViewModel.cs" />
+    <Compile Include="SpeckleRhinoWorker.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
