--- a/SpeckleRhinoChromium/packages.config
+++ b/SpeckleRhinoChromium/packages.config
@@ -4,10 +4,10 @@
   <package id="cef.redist.x86" version="3.2987.1601" targetFramework="net452" />
   <package id="CefSharp.Common" version="57.0.0" targetFramework="net452" />
   <package id="CefSharp.WinForms" version="57.0.0" targetFramework="net452" />
-  <package id="Grasshopper" version="6.0.17143.8371-wip" targetFramework="net452" />
+  <package id="Grasshopper" version="0.9.76" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
   <package id="RestSharp" version="105.2.3" targetFramework="net452" />
-  <package id="RhinoCommon" version="6.0.17143.8371-wip" targetFramework="net452" />
+  <package id="RhinoCommon" version="5.12.50810.13095" targetFramework="net452" />
   <package id="Speckle.RhinoConverter" version="0.0.1-rc2" targetFramework="net452" />
   <package id="Speckle.SpeckleCommon" version="0.0.1-rc6" targetFramework="net452" />
   <package id="WebSocketSharp" version="1.0.3-rc11" targetFramework="net452" />
