--- a/SpeckleRhinoJS/package.json
+++ b/SpeckleRhinoJS/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "axios": "^0.16.2",
     "event-emitter-es6": "^1.1.5",
+    "moment": "^2.18.1",
+    "three": "^0.86.0",
     "vue": "^2.2.1",
     "vue-material": "^0.7.1",
     "vuex": "^2.3.1"
@@ -18,6 +20,7 @@
   "devDependencies": {
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-latest": "^6.0.0",
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
