--- a/SpeckleRhinoJS/package.json
+++ b/SpeckleRhinoJS/package.json
@@ -13,7 +13,7 @@
     "event-emitter-es6": "^1.1.5",
     "moment": "^2.18.1",
     "three": "^0.86.0",
-    "vue": "^2.2.1",
+    "vue": "2.2.1",
     "vue-material": "^0.7.1",
     "vuex": "^2.3.1"
   },
@@ -26,7 +26,7 @@
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
     "vue-loader": "^11.1.4",
-    "vue-template-compiler": "^2.2.1",
+    "vue-template-compiler": "2.2.1",
     "webpack": "^2.2.0",
     "webpack-dev-server": "^2.2.0"
   }
